tests/health/gold/sdk/external__downloads__quectel-cellular__examples__bg96.toit.gold
<pkg:..>/quectel_cellular.toit:534:30: error: Super of a class must be a class
class Interface_ extends net.Interface:
                             ^~~~~~~~~
<pkg:pkg-http>/connection.toit:176:7: error: Missing implementations for interface methods
class DetachedSocket_ implements tcp.Socket:
      ^~~~~~~~~~~~~~~
<sdk>/net/tcp.toit:22:3: note: Missing implementation for 'no_delay'
  no_delay -> bool
  ^~~~~~~~
<sdk>/net/tcp.toit:25:3: note: Missing implementation for 'no_delay'
  no_delay= value/bool
  ^~~~~~~~~
<pkg:..>/quectel_cellular.toit:101:7: error: Missing implementations for interface methods
class TcpSocket extends Socket_ implements tcp.Socket:
      ^~~~~~~~~
<sdk>/net/tcp.toit:22:3: note: Missing implementation for 'no_delay'
  no_delay -> bool
  ^~~~~~~~
<sdk>/net/tcp.toit:25:3: note: Missing implementation for 'no_delay'
  no_delay= value/bool
  ^~~~~~~~~
<pkg:..>/quectel_cellular.toit:477:5: error: Type mismatch. Expected 'Interface'. Got 'Interface_'
    return Interface_ this
    ^~~~~~
